Add Security Hardening & Defense-in-Depth
- Enable InvalidChars filter globally against malicious input
- Add SecurityHeadersFilter (X-Content-Type-Options, X-Frame-Options,
  Referrer-Policy, Permissions-Policy, HSTS in production)
- Add AuthThrottleFilter for stricter auth endpoint rate limiting
  (5 attempts/15min vs 60/min general)
- Add JWT issuer (iss) and not-before (nbf) claims with validation
- Use hash_equals for password reset token comparison (timing attack prevention)
- Harden CORS: no localhost defaults in production
- Harden cookies: Secure flag + SameSite=Strict in production
- Enable CSRF token randomization
- Enforce password complexity (uppercase, lowercase, digit, special char, max 128)
- Add auth rate limit env config to .env.example
- Add i18n strings for new validations (en/es)

--- a/.env.example
+++ b/.env.example
@@ -93,6 +93,13 @@ RATE_LIMIT_REQUESTS = 60
 # Time window in seconds
 RATE_LIMIT_WINDOW = 60
 
+# Authentication-specific rate limiting (stricter for login/register/password-reset)
+# Maximum authentication attempts per window (per IP)
+AUTH_RATE_LIMIT_REQUESTS = 5
+
+# Authentication rate limit window in seconds (15 minutes)
+AUTH_RATE_LIMIT_WINDOW = 900
+
 #--------------------------------------------------------------------
 # SESSION
 #--------------------------------------------------------------------
